# cure-for-polyglots

./: README.md
src/cpp/: CMakeLists.txt  build_this.sh  cpp-outline.md  dynamic_array_with_allocated.cpp  dynamic_array_with_builtin.cpp  multithread_counter.cpp  multithread_counter_atomic.cpp  print_testwords.cpp
src/go/: go-outline.md
src/go/basic_printf/: go.mod
src/go/dynamic_array_with_allocated/: dynamic_array_with_allocated.go  go.mod
src/go/dynamic_array_with_builtin/: dynamic_array_with_builtin.go  go.mod
src/lua/: .gitignore  build_this.sh  dynamic_array_with_allocated.lua  dynamic_array_with_builtin.lua  lua-outline.md  print_testwords.lua  single_thread_counter.lua
src/rust/: .gitignore  build_this.sh  rust-outline.md
src/rust/basic_printf/: Cargo.toml
src/rust/dynamic_array_with_allocated/: Cargo.toml
src/rust/dynamic_array_with_allocated/src/: main.rs
src/rust/dynamic_array_with_builtin/: Cargo.toml
src/rust/dynamic_array_with_builtin/src/: main.rs
src/rust/multithread_counter/: Cargo.toml
src/rust/multithread_counter/src/: main.rs
src/rust/print_testwords/: Cargo.toml
src/rust/print_testwords/src/: main.rs
test-materials/: README.md
